@@ -15,6 +15,7 @@ from beancount.core.number import MISSING
 from beancount.core.number import ZERO
 from beancount.core.position import Cost
 from beancount.core.position import Position
+from beancount.core import convert
 
 from beancount.core import account
 from beancount.core import interpolate
@@ -316,7 +317,7 @@ def get_incomplete_postings(entry, options_map):
                 new_pos = Position(new_units, pos.cost)
 
                 # Update the residuals inventory.
-                weight = new_pos.get_cost()
+                weight = convert.get_cost(new_pos)
                 residual.add_amount(weight)
 
         postings[index:index+1] = new_postings
