@@ -20,6 +20,8 @@ Note: This file contains only changes in the 'default' branch.
 
   - Deprecated Position.at_cost(); use convert.get_cost(position) instead.
 
+  - Deprecated Position.get_cost(); use convert.get_cost(position) instead.
+
   - Converted all the old code to these new converted functions.
 
   - Moved module beancount.ops.prices to beancount.core.prices, and added a
